[gd_scene load_steps=29 format=3 uid="uid://clarv4n7o8im6"]

[ext_resource type="Script" path="res://components/actors/player/Player.gd" id="1_6xj4k"]
[ext_resource type="Texture2D" uid="uid://c7xtyudji7q6g" path="res://assets/art/player/player_walking_left_1.png" id="2_lhvb8"]
[ext_resource type="Texture2D" uid="uid://b4ukr0ri131e5" path="res://assets/art/player/player_walking_right_1.png" id="3_kruqx"]
[ext_resource type="Texture2D" uid="uid://hx7cdfyr8q06" path="res://assets/art/player/player_walking_left_with_weapon_1.png" id="4_bvfl4"]
[ext_resource type="Texture2D" uid="uid://bohpih5l57v5e" path="res://assets/art/player/player_walking_left_2.png" id="4_j07w4"]
[ext_resource type="Texture2D" uid="uid://bs4vdy3sweku6" path="res://assets/art/player/player_walking_right_2.png" id="5_dsq5y"]
[ext_resource type="Texture2D" uid="uid://dhegdlsswyrlj" path="res://assets/art/player/player_walking_right_with_weapon_1.png" id="7_587uf"]
[ext_resource type="Texture2D" uid="uid://cpcxpyxrpl0uu" path="res://assets/art/player/player_walking_left_with_weapon_2.png" id="8_bx1l7"]
[ext_resource type="Texture2D" uid="uid://tk2oyupkwuhm" path="res://assets/art/player/player_walking_right_with_weapon_2.png" id="8_wmiq0"]
[ext_resource type="AudioStream" uid="uid://ce2dcppxrvjec" path="res://assets/sound/walk.wav" id="10_awyxx"]
[ext_resource type="PackedScene" uid="uid://dcnv7c42q4elk" path="res://components/ui/health_bar/health_bar.tscn" id="11_38iii"]
[ext_resource type="AudioStream" uid="uid://cjwyuvt5l6tlw" path="res://assets/sound/actor2_hurt1.wav" id="12_n8eay"]
[ext_resource type="AudioStream" uid="uid://bg0yqkfriyxg1" path="res://assets/sound/jump.wav" id="12_pwox8"]
[ext_resource type="AudioStream" uid="uid://ddilkfbg162rl" path="res://assets/sound/actor1_hurt1.wav" id="13_0x0u5"]
[ext_resource type="AudioStream" uid="uid://pt602n5g3l0u" path="res://assets/sound/actor2_hurt2.wav" id="13_n1832"]
[ext_resource type="AudioStream" uid="uid://sgby472epubq" path="res://assets/sound/sword_pickup.wav" id="14_md2au"]
[ext_resource type="AudioStream" uid="uid://o6mbs8mao0tp" path="res://assets/sound/actor1_hurt2.wav" id="15_e37r8"]
[ext_resource type="AudioStream" uid="uid://dbdh64a1qi51a" path="res://assets/sound/actor1_die.wav" id="16_nlcyj"]
[ext_resource type="AudioStream" uid="uid://d0g4b6006l24m" path="res://assets/sound/actor2_die.wav" id="17_qcolf"]
[ext_resource type="AudioStream" uid="uid://yhgjx1cm242a" path="res://assets/sound/sfx_pickup.wav" id="20_iidyc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4axt"]
size = Vector2(32, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_kgixu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lhvb8")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_bvfl4")
}],
"loop": true,
"name": &"idle_left_weapon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kruqx")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_587uf")
}],
"loop": true,
"name": &"idle_right_weapon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lhvb8")
}, {
"duration": 1.0,
"texture": ExtResource("4_j07w4")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_bvfl4")
}, {
"duration": 1.0,
"texture": ExtResource("8_bx1l7")
}],
"loop": true,
"name": &"move_left_weapon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kruqx")
}, {
"duration": 1.0,
"texture": ExtResource("5_dsq5y")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_587uf")
}, {
"duration": 1.0,
"texture": ExtResource("8_wmiq0")
}],
"loop": true,
"name": &"move_right_weapon",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_tqekc"]
offsets = PackedFloat32Array(0, 0.675325)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_15uqp"]
gradient = SubResource("Gradient_tqekc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rcn21"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("10_awyxx")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7cbmr"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("12_pwox8")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_82laq"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("12_n8eay")
stream_0/weight = 1.0
stream_1/stream = ExtResource("13_0x0u5")
stream_1/weight = 1.0
stream_2/stream = ExtResource("13_n1832")
stream_2/weight = 1.0
stream_3/stream = ExtResource("15_e37r8")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cepyg"]
random_volume_offset_db = 1.0
streams_count = 2
stream_0/stream = ExtResource("16_nlcyj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("17_qcolf")
stream_1/weight = 1.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6xj4k")

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_y4axt")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.126, 0.12)
sprite_frames = SubResource("SpriteFrames_kgixu")
animation = &"idle_right_weapon"

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(7.62939e-06, -7.99999)
scale = Vector2(3.75, 3.75)
color = Color(1, 0.94902, 0.458824, 1)
texture = SubResource("GradientTexture2D_15uqp")

[node name="HealthBar" parent="." instance=ExtResource("11_38iii")]
position = Vector2(0, -56)

[node name="WalkingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rcn21")
volume_db = -10.0

[node name="JumpingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7cbmr")
volume_db = -10.0

[node name="HurtingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -56)
stream = SubResource("AudioStreamRandomizer_82laq")
volume_db = -12.0

[node name="DieAudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -56)
stream = SubResource("AudioStreamRandomizer_cepyg")

[node name="PickUpWeaponAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_md2au")

[node name="PickUpFlowerAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_iidyc")

[connection signal="finished" from="DieAudioStreamPlayer2D2" to="." method="_on_die_audio_stream_player_2d_2_finished"]
